# rpi

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  main.c
client/connection/: CMakeLists.txt
client/connection/include/: connection.h
client/connection/src/: connection.c
client/connection/test/: CMakeLists.txt
files/server/devices/: devices.xml  stm32h7.xml
lib/: CMakeLists.txt
lib/devices/: CMakeLists.txt
lib/devices/include/: devices.h  devices_boot.h  devices_thread.h
lib/devices/src/: devices.c  devices_boot.c  devices_thread.c
lib/devices/test/: CMakeLists.txt  devices_test.c  simple_test.c
lib/devices/test/files/: device.xml
lib/messages/: CMakeLists.txt
lib/messages/include/: messages.h  messages_action_type.h  messages_file_type.h  messages_info_type.h  messages_types.h
lib/messages/src/: messages.c
lib/messages/test/: CMakeLists.txt
lib/util/: CMakeLists.txt
lib/util/include/: error_codes.h  types.h  util_list.h  xml_parser.h
lib/util/src/: util_list.c  xml_parser.c
lib/util/test/: CMakeLists.txt  testList.c  xml_parser_test.c
lib/util/test/files/: device.xml
server/: CMakeLists.txt  main.c
server/client_connection/: CMakeLists.txt
server/client_connection/src/: client_connection.c
server/client_connection/test/: CMakeLists.txt
server/job_info/: CMakeLists.txt
server/job_info/include/: handle_job_info.h  handle_job_info_device_list.h
server/job_info/src/: handle_job_info_device_list.c
server/job_info/test/: CMakeLists.txt  job_info_devicelist_test.c
server/server_menagment/: CMakeLists.txt
server/server_menagment/test/: CMakeLists.txt
test/: CMakeLists.txt
